@@ -21,6 +21,19 @@ module t(/*AUTOARG*/);
    sabcu_t abcu;
    sabcp_t abcp;
 
+   typedef struct {
+      int         a;
+      int         b4[4];
+   } sab4u_t;
+
+   typedef struct packed {
+      int         a;
+      bit [3:0][31:0] b4;
+   } sab4p_t;
+
+   sab4u_t ab4u[2][3];
+   sab4p_t ab4p[2][3];
+
    initial begin
       abcp = '{1, 2, 3};
       abcu = '{1, 2, 3};
@@ -30,6 +43,15 @@ module t(/*AUTOARG*/);
       if (abcu.a !== 1) $stop;
       if (abcu.b !== 2) $stop;
       if (abcu.c !== 3) $stop;
+
+      abcp = '{3{40}};
+      abcu = '{3{40}};
+      if (abcp.a !== 40) $stop;
+      if (abcp.b !== 40) $stop;
+      if (abcp.c !== 40) $stop;
+      if (abcu.a !== 40) $stop;
+      if (abcu.b !== 40) $stop;
+      if (abcu.c !== 40) $stop;
 
       abcp = '{default:4, int:5};
       abcu = '{default:4, int:5};
@@ -48,6 +70,31 @@ module t(/*AUTOARG*/);
       if (abcu.a !== 8) $stop;
       if (abcu.b !== 8) $stop;
       if (abcu.c !== 7) $stop;
+
+      ab4p = '{2{'{3{'{10, '{2{20, 30}}}}}}};
+      ab4u = '{2{'{3{'{10, '{2{20, 30}}}}}}};
+      $display("%p", ab4p);
+      if (ab4p[0][0].a !== 10) $stop;
+      if (ab4p[0][0].b4[0] !== 30) $stop;
+      if (ab4p[0][0].b4[1] !== 20) $stop;
+      if (ab4p[0][0].b4[2] !== 30) $stop;
+      if (ab4p[0][0].b4[3] !== 20) $stop;
+      if (ab4p[1][2].a !== 10) $stop;
+      if (ab4p[1][2].b4[0] !== 30) $stop;
+      if (ab4p[1][2].b4[1] !== 20) $stop;
+      if (ab4p[1][2].b4[2] !== 30) $stop;
+      if (ab4p[1][2].b4[3] !== 20) $stop;
+      $display("%p", ab4u);
+      if (ab4u[0][0].a !== 10) $stop;
+      if (ab4u[0][0].b4[0] !== 20) $stop;
+      if (ab4u[0][0].b4[1] !== 30) $stop;
+      if (ab4u[0][0].b4[2] !== 20) $stop;
+      if (ab4u[0][0].b4[3] !== 30) $stop;
+      if (ab4u[1][2].a !== 10) $stop;
+      if (ab4u[1][2].b4[0] !== 20) $stop;
+      if (ab4u[1][2].b4[1] !== 30) $stop;
+      if (ab4u[1][2].b4[2] !== 20) $stop;
+      if (ab4u[1][2].b4[3] !== 30) $stop;
 
       $write("*-* All Finished *-*\n");
       $finish;
